[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/menu/main/button_bg_pressed.png" type="Texture" id=1]
[ext_resource path="res://sprites/menu/main/button_bg_normal.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/main/button_bg_hover.png" type="Texture" id=3]
[ext_resource path="res://assets/PixelGuzel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes and scripts/menu/menu_button.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="menu_button" type="TextureButton"]
margin_right = 94.0
margin_bottom = 30.0
keep_pressed_outside = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 3 )
script = ExtResource( 5 )

[node name="text_display" type="Label" parent="."]
modulate = Color( 0.721569, 0.721569, 0.721569, 1 )
margin_left = 4.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Buttong"
align = 1

[connection signal="mouse_entered" from="." to="." method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_menu_button_mouse_exited"]
